# speed-camera-system

./: .gitignore  Pipfile  docker-compose.yml  main.py  pyproject.toml  readme.md
docs/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_database_py.html  z_145eef247bfb46b6_entity_py.html  z_145eef247bfb46b6_execute_sql_file_py.html  z_145eef247bfb46b6_repository_py.html  z_145eef247bfb46b6_service_py.html  z_145eef247bfb46b6_typed_dict_py.html  z_299d3d5bb41c579e___init___py.html  z_299d3d5bb41c579e_entity_py.html  z_299d3d5bb41c579e_repository_py.html  z_299d3d5bb41c579e_typed_dict_py.html  z_67d056e3707ef46d___init___py.html  z_67d056e3707ef46d_connection_py.html  z_67d056e3707ef46d_execute_sql_file_py.html  z_c0152e0f41c29602___init___py.html  z_c0152e0f41c29602_dto_py.html  z_c0152e0f41c29602_violation_service_py.html
sql/: data.sql  data_test.sql
src/: config.py  database.py  databases.py  entity.py  execute_sql_file.py  repository.py  service.py  typed_dict.py
src/database/: connection.py  execute_sql_file.py
src/domain/: entity.py  repository.py  typed_dict.py
src/service/: dto.py  violation_service.py
tests/: conftest.py  test_repository.py  test_service.py
tests/test_domain/: conftest.py  test_repository.py
tests/test_service/: conftest.py  test_violation_service.py
